@@ -1,9 +1,11 @@
 DIST drumkv1-0.3.6.tar.gz 208578 SHA256 56fa0aff7ba83d4acb860d3f846f5fb55af8acb5bb1c63caef035239acaaf98e SHA512 f108d2168891e80d4e4629e7feb978175ff5de5d10f8846d0b42a908e3d6a907918826233fb5ec438d75a1d5252d87bf36b2a60d37e0aa60b1b153997789474a WHIRLPOOL 027db076ac5e5e6871a50a0d67e436c5e9f81e54a10c39d08c5a6324c121b46f1588007939c4d5195afcae3af532719508bef1c29185b1b082d6cf4aff069acd
 DIST drumkv1-0.4.0.tar.gz 211627 SHA256 ff7e827b10b3e1d5dbff468adfe4a0bceea4887cfe07a81fe01930b32325122e SHA512 bd90d80e2cdd71c793e930fb3370099a14af6e14d333976c5934daf2d29fde4f6f034d2940de18423c178f6166e43929195675da2ae437f6f1d82b8e91d73473 WHIRLPOOL 51bee70c402d5824fdb2724387ba8afa1eeccd808b5a5f82ea1b3a0e7176c2e0890c3eac77f222055cbd10c3db5b738d76e650726ef6f94e3fcab2a1803962fe
 DIST drumkv1-0.4.1.tar.gz 213520 SHA256 a6bc21d013ea934d817dd08277e33a9a6e9e1f752898baf8d5c9b65171b1ab73 SHA512 4d8105a22362c690580dedfbcdf58d40956d9917d11d5b07f3735bd380d2c47434e6ff16ca758ac4aa5f42268f6448cab02bed791e22dcbc49e4e7e34f2cfd02 WHIRLPOOL 981bf913f593757c81dccca52bcc32f0b20ccb8fa051d1eb6f7000d8779f23af11675208754c9969fd2d50d234cbbfee88a7e52965e240ecbd3ecaa695f22db0
+DIST drumkv1-0.5.1.tar.gz 219516 SHA256 38ab37993a7af93eac6fac878f0faca8cdbf5d29c9b1ecd16c568824842330b2 SHA512 5746329a472d944df2b46d21523d010b03b533946ea5654d7cf1a5b4109d5e2254b24563d5ea4a5b8d802ddb2e724c3e9cf7cd9d0faddde958b04e805964ec03 WHIRLPOOL aa5c575a4b5e58d60a3fbf9f8d8b455ac70b88c70f5fe25ddde9a6bae58a3aa7e3111c1a5ee25c42ea294469b52f9f723eefb080a9ca32d35db6f16820a4b89b
 EBUILD drumkv1-0.3.6.ebuild 1746 SHA256 6ef0f4913b3a1d7e1f13938e93dfb407f143a536a2f0d6b576fd35501f0e9b00 SHA512 32df1a30eba91abd0e41fff02692ca870bc5ea6c8538c969c58897349c6ca800d57f61ee2d666bd7ebdd93d4283f646c4c1e53410340d330ddb8cad51bfc765b WHIRLPOOL 839c03ccf97d1805478862bbc6581b0881e0cbb658c7195ddde8be1fb9deea7541101eab4e1828ba78fb44a50e2a0cdd7b473aec132e77134349d3bf53f01596
 EBUILD drumkv1-0.4.0.ebuild 1746 SHA256 6ef0f4913b3a1d7e1f13938e93dfb407f143a536a2f0d6b576fd35501f0e9b00 SHA512 32df1a30eba91abd0e41fff02692ca870bc5ea6c8538c969c58897349c6ca800d57f61ee2d666bd7ebdd93d4283f646c4c1e53410340d330ddb8cad51bfc765b WHIRLPOOL 839c03ccf97d1805478862bbc6581b0881e0cbb658c7195ddde8be1fb9deea7541101eab4e1828ba78fb44a50e2a0cdd7b473aec132e77134349d3bf53f01596
 EBUILD drumkv1-0.4.1.ebuild 1746 SHA256 6ef0f4913b3a1d7e1f13938e93dfb407f143a536a2f0d6b576fd35501f0e9b00 SHA512 32df1a30eba91abd0e41fff02692ca870bc5ea6c8538c969c58897349c6ca800d57f61ee2d666bd7ebdd93d4283f646c4c1e53410340d330ddb8cad51bfc765b WHIRLPOOL 839c03ccf97d1805478862bbc6581b0881e0cbb658c7195ddde8be1fb9deea7541101eab4e1828ba78fb44a50e2a0cdd7b473aec132e77134349d3bf53f01596
+EBUILD drumkv1-0.5.1.ebuild 1746 SHA256 6ef0f4913b3a1d7e1f13938e93dfb407f143a536a2f0d6b576fd35501f0e9b00 SHA512 32df1a30eba91abd0e41fff02692ca870bc5ea6c8538c969c58897349c6ca800d57f61ee2d666bd7ebdd93d4283f646c4c1e53410340d330ddb8cad51bfc765b WHIRLPOOL 839c03ccf97d1805478862bbc6581b0881e0cbb658c7195ddde8be1fb9deea7541101eab4e1828ba78fb44a50e2a0cdd7b473aec132e77134349d3bf53f01596
 EBUILD drumkv1-9999.ebuild 1746 SHA256 79877470e493f0d35456a13db992012bab197bcb9a490b08e2959429767772f8 SHA512 a7c91a87a829abb4e12d0bd3680639dfd6b998cf5dfe42fa329539c1ffc669640ea9d622fda35d1162bf7f0ff02068c946ca8d20c69b97d0aaeee1ff6ef01da4 WHIRLPOOL 4cbe1abf0c4e99f6087ab021ac7f716bd5d6ab08962452bac30a25ab1f7c0b6a9780051c021f142038d62454bbd13cad22e06e7cb8e69269dadb7247e3832222
-MISC ChangeLog 2206 SHA256 2a21df706cd3ff8009bafdca10fc0e359270e9a4adb56433ca3b88d2a3d30dfd SHA512 edb3f6a835863677a35899341640e06ad3a667807a4e59787f84e86aaa5f91b0936e34f2cb6de8cff588d2d9278aa72f5bb0ca52285c601e323ca68ae7012727 WHIRLPOOL d1e4e8a088614f9ee21c3d768a0dd1f9a55af75ff3e0ac51f92373edbabdaca9934a1758dc3b4f25ccfc01bccbe328d496a5920a437471d1b54626b69fc64643
+MISC ChangeLog 2333 SHA256 f3f922e55e5ac62e9a72df610d9025bea11dede8672ef99adf5d7040ab6b34e0 SHA512 74451a31c8a49991c1018fed951c6688eb9f2857c74746320d389d18c462ecb841279adfa2e3ae09d1b2471c5baa55d605ea380d271fa636d98e0999909cb9bf WHIRLPOOL a27b057107bf1abd711d4c88533fc53a3084806824cdff3294e09b18958ac7fb400805d03bda061028ebb5d49066956df6b39c0147daebd9b6ccb3c2081b54ec
 MISC metadata.xml 443 SHA256 5e4f2487b24581591d2196bfb8f55855d54003e43d9a1d193427def374e49f0a SHA512 d79095bdea6e89aa6c85edab36e47b085a48f5543aadfc02c026e007b03b3c416448d6d508b68975d8069590f3f6ca4a5ee25e8356c309adf550278d9ac05d22 WHIRLPOOL 247e41d25cf355611945b3350ddb06fae65d2ca63ba9ff49e589e6a573969d64b752607debc80862cbe54e7b6b4d828ffa22646b7adce7af223e6a0c1828c2ab
