@@ -1,9 +1,11 @@
 DIST samplv1-0.3.6.tar.gz 197373 SHA256 3e2bc3609433e6ebfed3a49573d799c888f9ffadefa8407688e8825b074ffeb9 SHA512 d215467e3f16300208275afabbbe3c6d9477958b7791208a2b3ef6385e822a3cd2a163331c3c810584a9573e50560d5304416af656fba5453243e1ed6fd03f26 WHIRLPOOL cecb43cdaf2ce9430fd5a52cb51e1c2446ee74f805ceb7179f9ff3ef2b6297f36ec16089015facf74930ce6dc52e095feae4d595c1a1dfe7d4a86af58ca37f51
 DIST samplv1-0.4.0.tar.gz 201724 SHA256 28e6b162d256cd48d3398d66fd85fe5662d50ed8be44d2f867a900522f6f7413 SHA512 4c24e30e3d39de8f90a311a30ee2d655a13c35375e28be5d33a41c2c1128f19d585492c96645df0987cbf783b2b477f5793b9a407975332c21d6f478e1fc7842 WHIRLPOOL 7edeec7ec644f4071b7ad2c2046b41062faf7b5ec864f1b95cac7f4fca776979bd6a8c8ec829f34fec9bb8b0c3f4c839b6a14105314072c48de18a95955b906d
 DIST samplv1-0.4.1.tar.gz 203444 SHA256 dde4ecacbb2c445143a6515f8fefc3d242bd46c1183e8d45f595b7bc93c6a3b3 SHA512 f0345b610e25df6303590c378bfcf29051fb463f66226b7dc4ea727582f5f3e09e2bc1ff4158fd84f836c1357a2db400272a11b388231629ad3d4b44207f69ea WHIRLPOOL 6944c78952a98ceccb8b1f56d04a1708616a3eab11d2b66c904e7218df3e18163201c34703cdd421c9ea2833d641aafa8a12b5c57ff838e40003ea412c137d97
+DIST samplv1-0.5.1.tar.gz 209202 SHA256 9e9b873ebcb2ec871f91691428163d25d04e019912fab510d4c762dfdfc1b894 SHA512 3e4253247bcf01960eee710abd870c11aea79d6626ffefeb9004f204b1ebc415a8d0f126b660fe3d57667efd6e7948526409f08fa6d8ff6907189ba2e46d8296 WHIRLPOOL 050afea35d9361fc38b93658022c46587846c81ae277902830f8d0288984f3f036e53d737029f892926258eadc42af46d9d6ee9f2a0ce5e4be17127cc75f36b0
 EBUILD samplv1-0.3.6.ebuild 1748 SHA256 0240fa24c8b1efeeb189662ccfbfaeb2d3fd34d2a632953e0f1e05989e2e7f64 SHA512 8b838bac63cbf634994b492fb96e3164e7216d62adfd4c7ed41af1d5bf3a6a04e5ce102324f29cfd13a9abd458d2248200c3cad871cda07a52976677e74694a9 WHIRLPOOL f97a2d38023a8f2a14bfdedad0bc0c1c7d7172ff8dbb4a5b483e3d78c72322f2ad0ec57dffb1898cf5aa5002659e70dd49722a20f86ff4e1c2b825e9c52bd28e
 EBUILD samplv1-0.4.0.ebuild 1748 SHA256 0240fa24c8b1efeeb189662ccfbfaeb2d3fd34d2a632953e0f1e05989e2e7f64 SHA512 8b838bac63cbf634994b492fb96e3164e7216d62adfd4c7ed41af1d5bf3a6a04e5ce102324f29cfd13a9abd458d2248200c3cad871cda07a52976677e74694a9 WHIRLPOOL f97a2d38023a8f2a14bfdedad0bc0c1c7d7172ff8dbb4a5b483e3d78c72322f2ad0ec57dffb1898cf5aa5002659e70dd49722a20f86ff4e1c2b825e9c52bd28e
 EBUILD samplv1-0.4.1.ebuild 1748 SHA256 0240fa24c8b1efeeb189662ccfbfaeb2d3fd34d2a632953e0f1e05989e2e7f64 SHA512 8b838bac63cbf634994b492fb96e3164e7216d62adfd4c7ed41af1d5bf3a6a04e5ce102324f29cfd13a9abd458d2248200c3cad871cda07a52976677e74694a9 WHIRLPOOL f97a2d38023a8f2a14bfdedad0bc0c1c7d7172ff8dbb4a5b483e3d78c72322f2ad0ec57dffb1898cf5aa5002659e70dd49722a20f86ff4e1c2b825e9c52bd28e
+EBUILD samplv1-0.5.1.ebuild 1748 SHA256 0240fa24c8b1efeeb189662ccfbfaeb2d3fd34d2a632953e0f1e05989e2e7f64 SHA512 8b838bac63cbf634994b492fb96e3164e7216d62adfd4c7ed41af1d5bf3a6a04e5ce102324f29cfd13a9abd458d2248200c3cad871cda07a52976677e74694a9 WHIRLPOOL f97a2d38023a8f2a14bfdedad0bc0c1c7d7172ff8dbb4a5b483e3d78c72322f2ad0ec57dffb1898cf5aa5002659e70dd49722a20f86ff4e1c2b825e9c52bd28e
 EBUILD samplv1-9999.ebuild 1748 SHA256 ee180807ee8059d96d482edf3e8da7f4e111f88b9e047d4dcd8a315fcf432dc8 SHA512 3b0d307dc2386fdf75948e2ad9a52efd9639ec9517af66d9709c1af0b5ecb8a9bf2bb6bad2b16d4234872ebd96d41bc1358e203929a36b64b6e22e46ad41e8fd WHIRLPOOL 3b4517467ea34bea5780b0a208709f387140cf1e78b19344ccd885392392a76f0df7f7c12dbad7556f3f993191347dcf30a690dfe29226d888e7de570e074f68
-MISC ChangeLog 2500 SHA256 02911b7e4002643fba84a7a8e126a8edad76b5721d1dfcea5e0fc54201dc0218 SHA512 81f52be3f366576139d1721bc96aab6d9d52cdb75284c8815095af9313c9de70ff215cf857e55d72075e8c694ad74b0b81272aeddce9065511b339051f16f677 WHIRLPOOL 6c9681a73cbbdc6afb5e79b47bb4658f8e3a060b98ab3a6025243d0b998c5d2a01db0fc8d593c3bccc4c710cd2f700bf8518b47b5a01dd28481e4a95cb735df8
+MISC ChangeLog 2627 SHA256 92eaf299569246c43101cd7dbde1645b7832d8b28469872a8cd05f7751147068 SHA512 1823ad2c25fa1ab73fb2cc93abde52c7f2b86c9fcfe102dd2459159513ab52235b55560651f34d370727aa98f8e16f99c10a0c2c9dd7068c2df8d5202c7f425e WHIRLPOOL bbfa0347663ce6fdd105afaf80c90fb54b8284235ca24a1adf18c00a16c3e6a0bed182ad8aa26081f302be625db971b656130e52ff84fa39c6b9bfbdc34f24a8
 MISC metadata.xml 443 SHA256 5e4f2487b24581591d2196bfb8f55855d54003e43d9a1d193427def374e49f0a SHA512 d79095bdea6e89aa6c85edab36e47b085a48f5543aadfc02c026e007b03b3c416448d6d508b68975d8069590f3f6ca4a5ee25e8356c309adf550278d9ac05d22 WHIRLPOOL 247e41d25cf355611945b3350ddb06fae65d2ca63ba9ff49e589e6a573969d64b752607debc80862cbe54e7b6b4d828ffa22646b7adce7af223e6a0c1828c2ab
