@@ -2,6 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*synthv1-0.5.1 (21 Sep 2014)
+  21 SEP 2014; Matt Henley (nwmatt) <nwmatt@gmail.com>
+  +synthv1-0.5.1.ebuild:
+  Version bump.
+
+
 *synthv1-0.4.1 (15 Apr 2014)
 
   15 Apr 2014; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
